Fix overflow

--- a/packages/frontend/src/app/identities/IdentitiesPage.scss
+++ b/packages/frontend/src/app/identities/IdentitiesPage.scss
@@ -18,5 +18,9 @@
 
   &__IdentitiesCountChart {
     overflow: visible !important;
+
+    .Chart {
+      overflow: visible !important;
+    }
   }
 }
